--- a/Xambo.CV.tex
+++ b/Xambo.CV.tex
@@ -237,51 +237,51 @@ Candidate’s Share: 50\% (\$1,650)
 
 \subsection*{Books}
 \noindent
-\years{2004}Xambó, A. (2004). \emph{Herramientas De Diseño Digital / Digital Design Tools}. Madrid: Anaya-Multimedia. ISBN 8441516979.
+\years{2004}\textbf{Xambó, A.} (2004). \emph{Herramientas De Diseño Digital / Digital Design Tools}. Madrid: Anaya-Multimedia. ISBN 8441516979.
 
 \subsection*{Peer-Reviewed Book Chapters}
 \noindent
-\years{2016}Xambó, A. (forthcoming), “Embodied music interaction: creative design synergies between music performance and HCI". In Price, S. and Broadhurst, S. eds. Digital Bodies: Creativity and Technology in the Arts and Humanities. Palgrave Macmillan, London.\\
-\years{2013}Xambó, A., Laney, R., Dobbyn, C. and Jordà, S. (2013). “Video analysis for evaluating music interaction: musical tabletops". In Holland, S., Wilkie, K., Mulholland, P. and Seago, A. eds. Music and Human-Computer Interaction. Springer, London. pp. 241--258. ISBN 9781447129905.
+\years{2016}\textbf{Xambó, A.} (forthcoming), “Embodied music interaction: creative design synergies between music performance and HCI". In Price, S. and Broadhurst, S. eds. Digital Bodies: Creativity and Technology in the Arts and Humanities. Palgrave Macmillan, London.\\
+\years{2013}\textbf{Xambó, A.}, Laney, R., Dobbyn, C. and Jordà, S. (2013). “Video analysis for evaluating music interaction: musical tabletops". In Holland, S., Wilkie, K., Mulholland, P. and Seago, A. eds. Music and Human-Computer Interaction. Springer, London. pp. 241--258. ISBN 9781447129905.
 
 \subsection*{Journal Articles}
 \noindent
-\years{2016c}Xambó, A., Hornecker, E., Marshall, P., Jordà, S., Dobbyn, C. and Laney, R. (2016). “Exploring social interaction with a tangible music interface". \emph{Interacting with Computers}.\\
-\years{2016b}Jewitt, C., Price, S., Xambó, A. (2016). “Conceptualising and researching the body in digital contexts: towards new methodological conversations across the arts and social sciences". \emph{Qualitative Research}.\\
-\years{2016a}Jewitt, C., Xambó, A. and Price, S. (2016). “Exploring methodological innovation in the social sciences: the body in digital environments and the arts". \emph{International Journal of Social Research Methodology}.\\
-\years{2013b}Xambó, A., Hornecker, E., Marshall, P., Jordà, S., Dobbyn, C. and Laney, R. (2013). “Let's jam the Reactable: peer learning during musical improvisation with a tabletop tangible interface". \emph{ACM Transactions on Computer-Human Interaction}, 20(6), pp. 36:1--36:34.\\
-\years{2013a}Bogdanov, D., Haro, M., Fuhrmann, F., Xambó, A., Gómez, E. and Herrera, P. (2013). “Semantic audio content-based music recommendation and visualization based on user preference examples". \emph{Information Processing \& Management}, 49(1), pp. 13--33.
+\years{2016c}\textbf{Xambó, A.}, Hornecker, E., Marshall, P., Jordà, S., Dobbyn, C. and Laney, R. (2016). “Exploring social interaction with a tangible music interface". \emph{Interacting with Computers}.\\
+\years{2016b}Jewitt, C., Price, S., \textbf{Xambó, A.} (2016). “Conceptualising and researching the body in digital contexts: towards new methodological conversations across the arts and social sciences". \emph{Qualitative Research}.\\
+\years{2016a}Jewitt, C., \textbf{Xambó, A.} and Price, S. (2016). “Exploring methodological innovation in the social sciences: the body in digital environments and the arts". \emph{International Journal of Social Research Methodology}.\\
+\years{2013b}\textbf{Xambó, A.}, Hornecker, E., Marshall, P., Jordà, S., Dobbyn, C. and Laney, R. (2013). “Let's jam the Reactable: peer learning during musical improvisation with a tabletop tangible interface". \emph{ACM Transactions on Computer-Human Interaction}, 20(6), pp. 36:1--36:34.\\
+\years{2013a}Bogdanov, D., Haro, M., Fuhrmann, F., \textbf{Xambó, A.}, Gómez, E. and Herrera, P. (2013). “Semantic audio content-based music recommendation and visualization based on user preference examples". \emph{Information Processing \& Management}, 49(1), pp. 13--33.
 
 \subsection*{Peer-Reviewed Conference Papers}
 \noindent
-\years{2016e}Xambó, A., Drozda, B., Weisling, A., Magerko, B., Huet, M., Gasque, T., Freeman, J. (accepted) Experience and ownership with a tangible computational music installation for informal learning. In \emph{Proceedings of the Tangible, Embedded, and Embodied Interaction Conference (TEI '17)}. \\ 
-\years{2016d}Tsuchiya, T., Xambó, A., Freeman, J. (2016). “Adapting DAW-driven musical language to live coding: a case study in EarSketch". In \emph{Late-Breaking Demo of the Second International Conference on Live Coding (ICLC '16)}. Hamilton, Canada.\\ 
-\years{2016c}Freeman, J., Magerko, B., Edwards, D., Miller, M., Moore, R., Xambó, A. (2016). “Using EarSketch to broaden participation in computing and music". In \emph{Proceedings of the 13th Sound and Music Computing Conference (SMC 2016)}. Hamburg, Germany. pp. 156--163.\\
-\years{2016b}Xambó, A., Lerch, A., Freeman, J. (2016). “Learning to code through MIR". In \emph{Extended abstracts for the Late-Breaking Demo Session of the 17th International Society for Music Information Retrieval Conference (ISMIR 2016)}. New York.\\
-\years{2016a}Xambó, A., Freeman, J., Magerko, B., Shah, P. (2016). “Challenges and new directions for collaborative live coding in the classroom". In \emph{International Conference of Live Interfaces (ICLI 2016)}. Brighton, UK.\\
-\years{2015}Freeman, J., Magerko, B., Edwards, D., Moore, R., McKlin, T., Xambó, A. (2015). “EarSketch: a STEAM approach to broadening participation in computer science principles". In \emph{Proceedings of the IEEE Research in Equity and Sustained Participation in Engineering, Computing, and Technology (RESPECT '15)}. Charlotte, NC. pp. 109--110.\\
-\years{2014b}Xambó, A., Roma, G., Laney, R., Dobbyn, C. and Jordà, S. (2014). “SoundXY4: supporting tabletop collaboration and awareness with ambisonics spatialisation". In \emph{Proceedings of the International Conference on New Interfaces for Musical Expression 2014 (NIME '14)}. London. pp. 249--252.\\
-\years{2014a}Xambó, A., Jewitt, C., and Price, S. (2014). “Towards an integrated methodological framework for understanding embodiment in HCI". In \emph{Proceedings of the Extended Abstracts on Human Factors in Computing Systems (CHI '14)}. Toronto. pp. 1411--1416.\\
-\years{2013}Bogdanov, D., Haro, M., Fuhrmann, F., Xambó, A., Gómez, E. and Herrera, P. (2013). “A content-based system for music recommendation and visualization of user preferences working on semantic notions". In \emph{IEEE 9th International Workshop on Content-Based Multimedia Indexing (CBMI '13)}. Madrid. pp. 249--252.\\
-\years{2012}Roma, G.; Xambó, A.; Herrera, P. and Laney, R. (2012). “Factors in human recognition of timbre lexicons generated by data clustering". In \emph{Proceedings of the 9th Sound and Music Computing Conference (SMC 2012)}. Copenhagen, Denmark. pp. 23--30.\\
-\years{2011c}Xambó, A., Laney, R., Dobbyn, C. and Jordà, S. (2011). “Multi-touch interaction principles for collaborative real-time music activities: towards a pattern language". In \emph{Proceedings of the International Computer Music Conference (ICMC '11)}. Huddersfield, UK. pp. 403--406.\\
-\years{2011b}Xambó, A., Laney, R. and Dobbyn, C. (2011). “TOUCHtr4ck: democratic collaborative music". In \emph{Proceedings of the Tangible, Embedded, and Embodied Interaction Conference (TEI '11)}. Funchal, Madeira. pp. 309--312.\\
-\years{2011a}Milne, A. J.; Xambó, A.; Laney, R.; Sharp, D. B.; Prechtl, A. and Holland, S. (2011). “Hex Player — a virtual musical controller". In \emph{Proceedings of the International Conference on New Interfaces for Musical Expression (NIME '11)}. Oslo, Norway. pp. 244--247.\\
-\years{2010b}Laney, R., Dobbyn, C., Xambó, A., Schirosa, M., Miell, D., Littleton, K. and Dalton, N. (2010). “Issues and techniques for collaborative music making on multi-touch surfaces". In \emph{7th Sound and Music Computing Conference (SMC 2010)}. Barcelona. pp. 146–153.\\
-\years{2010a}Haro, M.; Xambó, A.; Fuhrmann, F.; Bogdanov, D.; Gómez, E. and Herrera, P. (2010). “The Musical Avatar: a visualization of musical preferences by means of audio content description". In \emph{Proceedings of the 5th Audio Mostly Conference (AM '10)}. Piteå, Sweden.\\
-\years{2008}Roma, G. and Xambó, A. (2008). “A tabletop waveform editor for live performance". In \emph{Proceedings of the International Conference on New Interfaces for Musical Expression (NIME '08)}. Genoa, Italy.
+\years{2016e}\textbf{Xambó, A.}, Drozda, B., Weisling, A., Magerko, B., Huet, M., Gasque, T., Freeman, J. (accepted) Experience and ownership with a tangible computational music installation for informal learning. In \emph{Proceedings of the Tangible, Embedded, and Embodied Interaction Conference (TEI '17)}. \\ 
+\years{2016d}Tsuchiya, T., \textbf{Xambó, A.}, Freeman, J. (2016). “Adapting DAW-driven musical language to live coding: a case study in EarSketch". In \emph{Late-Breaking Demo of the Second International Conference on Live Coding (ICLC '16)}. Hamilton, Canada.\\ 
+\years{2016c}Freeman, J., Magerko, B., Edwards, D., Miller, M., Moore, R., \textbf{Xambó, A.} (2016). “Using EarSketch to broaden participation in computing and music". In \emph{Proceedings of the 13th Sound and Music Computing Conference (SMC 2016)}. Hamburg, Germany. pp. 156--163.\\
+\years{2016b}\textbf{Xambó, A.}, Lerch, A., Freeman, J. (2016). “Learning to code through MIR". In \emph{Extended abstracts for the Late-Breaking Demo Session of the 17th International Society for Music Information Retrieval Conference (ISMIR 2016)}. New York.\\
+\years{2016a}\textbf{Xambó, A.}, Freeman, J., Magerko, B., Shah, P. (2016). “Challenges and new directions for collaborative live coding in the classroom". In \emph{International Conference of Live Interfaces (ICLI 2016)}. Brighton, UK.\\
+\years{2015}Freeman, J., Magerko, B., Edwards, D., Moore, R., McKlin, T., \textbf{Xambó, A.} (2015). “EarSketch: a STEAM approach to broadening participation in computer science principles". In \emph{Proceedings of the IEEE Research in Equity and Sustained Participation in Engineering, Computing, and Technology (RESPECT '15)}. Charlotte, NC. pp. 109--110.\\
+\years{2014b}\textbf{Xambó, A.}, Roma, G., Laney, R., Dobbyn, C. and Jordà, S. (2014). “SoundXY4: supporting tabletop collaboration and awareness with ambisonics spatialisation". In \emph{Proceedings of the International Conference on New Interfaces for Musical Expression 2014 (NIME '14)}. London. pp. 249--252.\\
+\years{2014a}\textbf{Xambó, A.}, Jewitt, C., and Price, S. (2014). “Towards an integrated methodological framework for understanding embodiment in HCI". In \emph{Proceedings of the Extended Abstracts on Human Factors in Computing Systems (CHI '14)}. Toronto. pp. 1411--1416.\\
+\years{2013}Bogdanov, D., Haro, M., Fuhrmann, F., \textbf{Xambó, A.}, Gómez, E. and Herrera, P. (2013). “A content-based system for music recommendation and visualization of user preferences working on semantic notions". In \emph{IEEE 9th International Workshop on Content-Based Multimedia Indexing (CBMI '13)}. Madrid. pp. 249--252.\\
+\years{2012}Roma, G.; \textbf{Xambó, A.}; Herrera, P. and Laney, R. (2012). “Factors in human recognition of timbre lexicons generated by data clustering". In \emph{Proceedings of the 9th Sound and Music Computing Conference (SMC 2012)}. Copenhagen, Denmark. pp. 23--30.\\
+\years{2011c}\textbf{Xambó, A.}, Laney, R., Dobbyn, C. and Jordà, S. (2011). “Multi-touch interaction principles for collaborative real-time music activities: towards a pattern language". In \emph{Proceedings of the International Computer Music Conference (ICMC '11)}. Huddersfield, UK. pp. 403--406.\\
+\years{2011b}\textbf{Xambó, A.}, Laney, R. and Dobbyn, C. (2011). “TOUCHtr4ck: democratic collaborative music". In \emph{Proceedings of the Tangible, Embedded, and Embodied Interaction Conference (TEI '11)}. Funchal, Madeira. pp. 309--312.\\
+\years{2011a}Milne, A. J.; \textbf{Xambó, A.}; Laney, R.; Sharp, D. B.; Prechtl, A. and Holland, S. (2011). “Hex Player — a virtual musical controller". In \emph{Proceedings of the International Conference on New Interfaces for Musical Expression (NIME '11)}. Oslo, Norway. pp. 244--247.\\
+\years{2010b}Laney, R., Dobbyn, C., \textbf{Xambó, A.}, Schirosa, M., Miell, D., Littleton, K. and Dalton, N. (2010). “Issues and techniques for collaborative music making on multi-touch surfaces". In \emph{7th Sound and Music Computing Conference (SMC 2010)}. Barcelona. pp. 146–153.\\
+\years{2010a}Haro, M.; \textbf{Xambó, A.}; Fuhrmann, F.; Bogdanov, D.; Gómez, E. and Herrera, P. (2010). “The Musical Avatar: a visualization of musical preferences by means of audio content description". In \emph{Proceedings of the 5th Audio Mostly Conference (AM '10)}. Piteå, Sweden.\\
+\years{2008}Roma, G. and \textbf{Xambó, A.} (2008). “A tabletop waveform editor for live performance". In \emph{Proceedings of the International Conference on New Interfaces for Musical Expression (NIME '08)}. Genoa, Italy.
 
 \subsection*{Position \& Workshop Papers}
 \noindent
 
-\years{2012}Xambó, A.; Laney, R.; Dobbyn, C. and Jordà, S. (September 11, 2012). “Towards a taxonomy for video analysis on collaborative musical tabletops". In \emph{BCS HCI 2012 Workshop on video analysis techniques for HCI}. Birmingham, UK.\\
-\years{2011}Xambó, A.; Laney, R.; Dobbyn, C. and Jordà, S. (July 4, 2011). “Collaborative music interaction on tabletops: an HCI approach". In \emph{BCS HCI 2011 Workshop on When Words Fail: What can Music Interaction tell us about HCI?}. Newcastle Upon Tyne.
+\years{2012}\textbf{Xambó, A.}; Laney, R.; Dobbyn, C. and Jordà, S. (September 11, 2012). “Towards a taxonomy for video analysis on collaborative musical tabletops". In \emph{BCS HCI 2012 Workshop on video analysis techniques for HCI}. Birmingham, UK.\\
+\years{2011}\textbf{Xambó, A.}; Laney, R.; Dobbyn, C. and Jordà, S. (July 4, 2011). “Collaborative music interaction on tabletops: an HCI approach". In \emph{BCS HCI 2011 Workshop on When Words Fail: What can Music Interaction tell us about HCI?}. Newcastle Upon Tyne.
 
 \subsection*{Reports \& Working Papers}
 \noindent
 
-\years{2008}Xambó, A. (2008). Interfaces for Sketching Musical Compositions. Unpublished master's thesis. UPF.\\ 
-\years{2004}Xambó, A. and Martos, E. (2004). Crossmedia Infantil: Estudi sobre les noves tecnologies i la comunicació audiovisual a l'escola infantil i primària (Report of new technologies and audiovisual communication in the primary education). Unpublished report. Supported by Fundació Caixa de Sabadell. In collaboration with UB.
+\years{2008}\textbf{Xambó, A.} (2008). Interfaces for Sketching Musical Compositions. Unpublished master's thesis. UPF.\\ 
+\years{2004}\textbf{Xambó, A.} and Martos, E. (2004). Crossmedia Infantil: Estudi sobre les noves tecnologies i la comunicació audiovisual a l'escola infantil i primària (Report of new technologies and audiovisual communication in the primary education). Unpublished report. Supported by Fundació Caixa de Sabadell. In collaboration with UB.
 
 
 %\section*{Talks, Presentations, Demos \& Workshops}
@@ -291,7 +291,7 @@ Candidate’s Share: 50\% (\$1,650)
 \subsection*{External}
 \years{2016e} \textsc{Oral Presenter}. Xambó, A. (July 2, 2016). Challenges and new directions for collaborative live coding in the classroom. \emph{ICLI 2016}. Brighton, UK.\\
 \years{2016c} \textsc{Keynote Speaker}. Dobson, L. and Xambó, A. (April 22, 2016). Anna Xambó and Liz Dobson in conversation. \emph{Women in Sound Women on Sound 2016: Educating girls in sound} at University of Lancaster. Lancaster, UK.\\
-\years{2015a} \textsc{Lighting Talk Speaker}. Xambó, A. (August 14, 2015). EarSketch: a STEAM approach to broadening participation in computer science principles. \emph{RESPECT 2015}. Charlotte, NC. US.\\
+\years{2015a} \textsc{Lightning Talk Speaker}. Xambó, A. (August 14, 2015). EarSketch: a STEAM approach to broadening participation in computer science principles. \emph{RESPECT 2015}. Charlotte, NC. USA.\\
 \years{2014c} \textsc{Oral Presenter}. Xambó, A. (July 1, 2014). SoundXY4: Supporting tabletop collaboration and awareness with ambisonics spatialisation. \emph{NIME '14}. London.\\
 \years{2014b} \textsc{Oral Presenter}. Xambó, A. (April 30, 2014). Let's jam the Reactable: Peer learning during musical improvisation with a tabletop tangible interface. \emph{CHI '14}. Toronto, ON.\\
 \years{2013b} \textsc{Oral Presenter}. Xambó, A. (November 11, 2013). Tabletop tangible interfaces for music performance and implications for tabletop research. \emph{School of Computing}, University of Kent. Kent, UK.\\
@@ -304,6 +304,7 @@ Candidate’s Share: 50\% (\$1,650)
 \years{2007}\textsc{Oral Presenter}. Roma, G. and Xambó, A. (September 20, 2007). A sound editor with a tangible interface. \emph{SCSymposium(2007)}, DCM. The Hague, The Netherlands.
 
 \subsection*{Own Institution}
+\years{2016d} \textsc{Lightning Talk Speaker}. Xambó, A. (November 2, 2016). Tangible user interfaces and tabletops. \emph{First Annual Women and Music Tech Concert and Reception}. Atlanta, GA. USA.\\
 \years{2016c} \textsc{Panel Member}. Xambó, A.; Ikkache, L. and Jackson, D. (May 5, 2016). Women in Sound. Oral presentation and discussion. \emph{Georgia Tech Center for Music Technology (GTCMT)}, Geogia Tech. Atlanta, GA, USA.\\
 \years{2016b} \textsc{Oral Presenter}. Xambó, A. (February 25, 2016). Algorithmic composition: my personal journey. Oral presentation as a guest speaker in Jason Freeman's \emph{Computer Music Composition} class. GTCMT. Atlanta, GA, USA.\\
 \years{2016a} \textsc{Oral Presenter}. Xambó, A. (January 26, 2016). EarSketch: computational music remixing for all. Oral presentation as a guest speaker in Barbara Ericson's \emph{Educational Technology} class. College of Computing, Georgia Tech. Atlanta, GA, USA.\\
@@ -522,9 +523,9 @@ Course: \emph{Crossmedia infantil} (12 h). \# Students (3--4 years old): $\sim$8
 \subsection*{Journal Reviewer}
 \noindent
 
-\years{2015--present}\emph{International Journal of Human-Computer Studies}. Elsevier.\\
-\years{2016--present}\emph{Interacting with Computers}. Oxford Journals.\\
-\years{2016--present}\emph{Qualitative Research}. Sage Publications.
+\years{2015}\emph{International Journal of Human-Computer Studies}. Elsevier.\\
+\years{2016}\emph{Interacting with Computers}. Oxford Journals.\\
+\years{2016}\emph{Qualitative Research}. Sage Publications.
 
 \subsection*{Jury Member}
 \noindent
