--- a/Xambo.CV.tex
+++ b/Xambo.CV.tex
@@ -212,7 +212,7 @@ Project: ``Transdata Pr.''.  \\
 Role: Creator, Video Editor \& Director.\\
 Collaborators: Gerard Roma (music), Oscar Abril Ascaso (essay). \\
 Total Dollar Amount: \$3,300 \\ 
-Candidate’s Share: 50\% (\$1,650)\\[.5cm] 
+Candidate’s Share: 50\% (\$1,650)\\[.9cm] 
 
 \years{09/1998--08/1999}\textsc{Audiovisual production grant} \\
 Funding body: Departament de Cultura de la Generalitat de Catalunya (Department of Culture of Catalan Government).\\
@@ -353,22 +353,22 @@ Candidate’s Share: 50\% (\$1,650)
 
 \subsection*{Broadcasting}
 
-\years{2013}peterMann's og02. (July 28, 2013). BiP\_HOp Generation on Radio Grenouille.\\
-\years{2013}peterMann's og01, og05, og07 \& og09. (June 23, 2013). Framework radio \#426.\\
-\years{2013}peterMann's og01. (March 28, 2013). Rare Frequency on WZBC 90.3 FM Newton Boston College Radio.\\
-\years{2013}peterMann's og01 \& og10. (March 2, 2013). Onda Sonora.\\
-\years{2013}peterMann's selection of \emph{On The Go}'s tracks. (February 3, 2013). RNE Atmósfera.\\
-\years{2013}peterMann's og02. (February 2, 2013). Störung Radio 127 on ScannerFM.\\
-\years{2010}peterMann's init 10, init 11 \& init 12. (December 18, 2010). Onda Sonora.\\
-\years{2010}peterMann's init 2. (April 12, 2010). Sismógrafo.
+\years{2013f}peterMann's og02. (July 28, 2013). BiP\_HOp Generation on Radio Grenouille.\\
+\years{2013e}peterMann's og01, og05, og07 \& og09. (June 23, 2013). Framework radio \#426.\\
+\years{2013d}peterMann's og01. (March 28, 2013). Rare Frequency on WZBC 90.3 FM Newton Boston College Radio.\\
+\years{2013c}peterMann's og01 \& og10. (March 2, 2013). Onda Sonora.\\
+\years{2013b}peterMann's selection of \emph{On The Go}'s tracks. (February 3, 2013). RNE Atmósfera.\\
+\years{2013a}peterMann's og02. (February 2, 2013). Störung Radio 127 on ScannerFM.\\
+\years{2010b}peterMann's init 10, init 11 \& init 12. (December 18, 2010). Onda Sonora.\\
+\years{2010a}peterMann's init 2. (April 12, 2010). Sismógrafo.
 
 
 \section*{Performances}
 
 \subsection*{Solo Performances}
 
-\years{2016}Xambó, A. (April 22, 2016). Live coding with EarSketch. \emph{Women in Sound Women on Sound 2016: Educating girls in sound}. Jack Hylton Music Room, University of Lancaster. Lancaster, UK.\\
-\years{2016}peterMann. (April 22, 2016). Live. \emph{Women in Sound Women on Sound 2016: Educating girls in sound}. Jack Hylton Music Room, University of Lancaster. Lancaster, UK.\\
+\years{2016b}Xambó, A. (April 22, 2016). Live coding with EarSketch. \emph{Women in Sound Women on Sound 2016: Educating girls in sound}. Jack Hylton Music Room, University of Lancaster. Lancaster, UK.\\
+\years{2016a}peterMann. (April 22, 2016). Live. \emph{Women in Sound Women on Sound 2016: Educating girls in sound}. Jack Hylton Music Room, University of Lancaster. Lancaster, UK.\\
 \years{2013}Xambó, A. (October 4, 2013). Live. \emph{Perspectives on Multichannel Live Coding}. PHONOS. Sala Polivalent, UPF. Barcelona.\\
 \years{2012}peterMann. (September 20, 2012). Live. \emph{Crispy Crunchy Creaky}. Niu. Barcelona.\\
 \years{2006}peterMann. (June 10, 2006). Live. \emph{5a Mostra Sonora i Visual | Convent Sant Agustí}. Barcelona.
@@ -405,7 +405,7 @@ Role: Concept, implementation and tangible user interface design.
 
 \subsection*{Video Creations \& Animation Films}
 
-\years{2003a}Xambó, A. (2003). \emph{Cosmogonias} (3 min). Spain. Video creation | Animation film.\\
+\years{2003}Xambó, A. (2003). \emph{Cosmogonias} (3 min). Spain. Video creation | Animation film.\\
 \years{2002b}Xambó, A. (2002). \emph{b.scope} (3 min). Spain. Video creation.\\ %3:23
 \years{2002a}Xambó, A. (2002). \emph{Transdata Pr.} (5 min). Spain. Video creation.\\
 \years{2000}Xambó, A. (2000). \emph{clubsfera} (3 min). Spain. Video creation | Animation film.\\
@@ -524,8 +524,8 @@ Course: \emph{Crossmedia infantil} (12 h). \# Students (3--4 years old): $\sim$8
 \noindent
 
 \years{2015}\emph{International Journal of Human-Computer Studies}. Elsevier.\\
-\years{2016}\emph{Interacting with Computers}. Oxford Journals.\\
-\years{2016}\emph{Qualitative Research}. Sage Publications.
+\years{2016b}\emph{Interacting with Computers}. Oxford Journals.\\
+\years{2016a}\emph{Qualitative Research}. Sage Publications.
 
 \subsection*{Jury Member}
 \noindent
