--- a/Xambo.CV.tex
+++ b/Xambo.CV.tex
@@ -304,7 +304,7 @@ Candidate’s Share: 50\% (\$1,650)
 \years{2007}\textsc{Oral Presenter}. Roma, G. and Xambó, A. (September 20, 2007). A sound editor with a tangible interface. \emph{SCSymposium(2007)}, DCM. The Hague, The Netherlands.
 
 \subsection*{Own Institution}
-\years{2016d} \textsc{Lightning Talk Speaker}. Xambó, A. (November 2, 2016). Tangible user interfaces and tabletops. \emph{First Annual Women and Music Tech Concert and Reception}. Atlanta, GA. USA.\\
+\years{2016d} \textsc{Lightning Talk Speaker}. Xambó, A. (November 2, 2016). Tangible user interfaces and tabletops. \emph{First Annual Women and Music Tech Concert and Reception}, The Garage. Atlanta, GA. USA.\\
 \years{2016c} \textsc{Panel Member}. Xambó, A.; Ikkache, L. and Jackson, D. (May 5, 2016). Women in Sound. Oral presentation and discussion. \emph{Georgia Tech Center for Music Technology (GTCMT)}, Geogia Tech. Atlanta, GA, USA.\\
 \years{2016b} \textsc{Oral Presenter}. Xambó, A. (February 25, 2016). Algorithmic composition: my personal journey. Oral presentation as a guest speaker in Jason Freeman's \emph{Computer Music Composition} class. GTCMT. Atlanta, GA, USA.\\
 \years{2016a} \textsc{Oral Presenter}. Xambó, A. (January 26, 2016). EarSketch: computational music remixing for all. Oral presentation as a guest speaker in Barbara Ericson's \emph{Educational Technology} class. College of Computing, Georgia Tech. Atlanta, GA, USA.\\
