--- a/Xambo.CV.tex
+++ b/Xambo.CV.tex
@@ -117,7 +117,7 @@ Dissertation: \emph{Interfaces for Sketching Musical Compositions}.\\
 %\hrule
 \section*{Dissertation}
 \noindent
-\years{Title}Xambó, A. (2015). \emph{Tabletop Tangible Interfaces for Music Performance: Design and Evaluation}.\\
+\years{Title}\textbf{Xambó, A.} (2015). \emph{Tabletop Tangible Interfaces for Music Performance: Design and Evaluation}.\\
 \years{Advisors}Dr Robin Laney, Mr Chris Dobbyn and Prof Sergi Jordà.\\
 \years{Examiners}Prof Eduardo Reck Miranda and Dr Janet van der Linden.\\
 \years{Website}\href{http://oro.open.ac.uk/42473/}{http://oro.open.ac.uk/42473/}\\[.3cm]
@@ -130,11 +130,12 @@ Dissertation: \emph{Interfaces for Sketching Musical Compositions}.\\
 \years{1982--1988}\textsc{Music Theory \& Solfege}, Conservatori Superior de Música del Liceu, Barcelona.
 \noindent
 \subsection*{Workshops}
-\years{2014}\textsc{Taller composición acusmática} (Acousmatic composition workshop). Beatriz Ferreyra.\\
-\years{2012}\textsc{Síntesi no estàndard: tècniques, estètiques, extensions} (Non-standard synthesis: techniques, aesthetics, extensions). Luc Döbereiner.\\
-\years{2009}\textsc{Taller construeix el teu propi sintetitzador} (Build your own synthesizer workshop). Tom Bugs.\\
-\years{2006}\textsc{El món com a instrument} (The world as an instrument). Francisco López.\\
-\years{1998}\textsc{Improvització mètode Cobra} (Cobra improvisation method). Orquestra del Caos.
+\years{2014}\textsc{Taller composición acusmática} (Acousmatic composition workshop). Beatriz Ferreyra. Barcelona.\\
+\years{2012}\textsc{Síntesi no estàndard: tècniques, estètiques, extensions} (Non-standard synthesis: techniques, aesthetics, extensions). Luc Döbereiner. Barcelona.\\
+\years{2009}\textsc{Taller construeix el teu propi sintetitzador} (Build your own synthesizer workshop). Tom Bugs. Barcelona.\\
+\years{2008}\textsc{SMC Summer School}. Xavier Serra, Marc Leman, Benjamin Knapp, and the Casa Paganini - InfoMus Lab. Genoa, Italy.\\
+\years{2006}\textsc{El món com a instrument} (The world as an instrument). Francisco López. Barcelona.\\
+\years{1998}\textsc{Improvització mètode Cobra} (Cobra improvisation method). Orquestra del Caos. Barcelona.
 
 %%\hrule
 \section*{Employment}
@@ -230,7 +231,7 @@ Candidate’s Share: 50\% (\$1,650)
 \textbullet \- \href{https://scholar.google.com/citations?user=yi3WXM8AAAAJ}{Scholar Google}\\
 \textbullet \- \href{http://oro.open.ac.uk/view/person/ax22.html}{Open Research Online}\\
 \textbullet \- \href{http://open.academia.edu/AnnaXambo}{Academia.edu}\\
-\textbullet \- \href{http://www.researchgate.net/profile/Anna_Xambo}{ResearchGate}
+\textbullet \- \href{http://www.researchgate.net/profile/Anna_Xambo}{ResearchGate}\\
 
 \section*{Publications}
 \noindent
@@ -254,14 +255,10 @@ Candidate’s Share: 50\% (\$1,650)
 
 \subsection*{Peer-Reviewed Conference Papers}
 \noindent
-\years{2016e}\textbf{Xambó, A.}, Drozda, B., Weisling, A., Magerko, B., Huet, M., Gasque, T., Freeman, J. (accepted) Experience and ownership with a tangible computational music installation for informal learning. In \emph{Proceedings of the Tangible, Embedded, and Embodied Interaction Conference (TEI '17)}. \\ 
-\years{2016d}Tsuchiya, T., \textbf{Xambó, A.}, Freeman, J. (2016). “Adapting DAW-driven musical language to live coding: a case study in EarSketch". In \emph{Late-Breaking Demo of the Second International Conference on Live Coding (ICLC '16)}. Hamilton, Canada.\\ 
-\years{2016c}Freeman, J., Magerko, B., Edwards, D., Miller, M., Moore, R., \textbf{Xambó, A.} (2016). “Using EarSketch to broaden participation in computing and music". In \emph{Proceedings of the 13th Sound and Music Computing Conference (SMC 2016)}. Hamburg, Germany. pp. 156--163.\\
-\years{2016b}\textbf{Xambó, A.}, Lerch, A., Freeman, J. (2016). “Learning to code through MIR". In \emph{Extended abstracts for the Late-Breaking Demo Session of the 17th International Society for Music Information Retrieval Conference (ISMIR 2016)}. New York.\\
+\years{2016c}\textbf{Xambó, A.}, Drozda, B., Weisling, A., Magerko, B., Huet, M., Gasque, T., Freeman, J. (accepted) Experience and ownership with a tangible computational music installation for informal learning. In \emph{Proceedings of the Tangible, Embedded, and Embodied Interaction Conference (TEI '17)}. \\ 
+\years{2016b}Freeman, J., Magerko, B., Edwards, D., Miller, M., Moore, R., \textbf{Xambó, A.} (2016). “Using EarSketch to broaden participation in computing and music". In \emph{Proceedings of the 13th Sound and Music Computing Conference (SMC 2016)}. Hamburg, Germany. pp. 156--163.\\
 \years{2016a}\textbf{Xambó, A.}, Freeman, J., Magerko, B., Shah, P. (2016). “Challenges and new directions for collaborative live coding in the classroom". In \emph{International Conference of Live Interfaces (ICLI 2016)}. Brighton, UK.\\
-\years{2015}Freeman, J., Magerko, B., Edwards, D., Moore, R., McKlin, T., \textbf{Xambó, A.} (2015). “EarSketch: a STEAM approach to broadening participation in computer science principles". In \emph{Proceedings of the IEEE Research in Equity and Sustained Participation in Engineering, Computing, and Technology (RESPECT '15)}. Charlotte, NC. pp. 109--110.\\
-\years{2014b}\textbf{Xambó, A.}, Roma, G., Laney, R., Dobbyn, C. and Jordà, S. (2014). “SoundXY4: supporting tabletop collaboration and awareness with ambisonics spatialisation". In \emph{Proceedings of the International Conference on New Interfaces for Musical Expression 2014 (NIME '14)}. London. pp. 249--252.\\
-\years{2014a}\textbf{Xambó, A.}, Jewitt, C., and Price, S. (2014). “Towards an integrated methodological framework for understanding embodiment in HCI". In \emph{Proceedings of the Extended Abstracts on Human Factors in Computing Systems (CHI '14)}. Toronto. pp. 1411--1416.\\
+\years{2014}\textbf{Xambó, A.}, Roma, G., Laney, R., Dobbyn, C. and Jordà, S. (2014). “SoundXY4: supporting tabletop collaboration and awareness with ambisonics spatialisation". In \emph{Proceedings of the International Conference on New Interfaces for Musical Expression 2014 (NIME '14)}. London. pp. 249--252.\\
 \years{2013}Bogdanov, D., Haro, M., Fuhrmann, F., \textbf{Xambó, A.}, Gómez, E. and Herrera, P. (2013). “A content-based system for music recommendation and visualization of user preferences working on semantic notions". In \emph{IEEE 9th International Workshop on Content-Based Multimedia Indexing (CBMI '13)}. Madrid. pp. 249--252.\\
 \years{2012}Roma, G.; \textbf{Xambó, A.}; Herrera, P. and Laney, R. (2012). “Factors in human recognition of timbre lexicons generated by data clustering". In \emph{Proceedings of the 9th Sound and Music Computing Conference (SMC 2012)}. Copenhagen, Denmark. pp. 23--30.\\
 \years{2011c}\textbf{Xambó, A.}, Laney, R., Dobbyn, C. and Jordà, S. (2011). “Multi-touch interaction principles for collaborative real-time music activities: towards a pattern language". In \emph{Proceedings of the International Computer Music Conference (ICMC '11)}. Huddersfield, UK. pp. 403--406.\\
@@ -269,13 +266,21 @@ Candidate’s Share: 50\% (\$1,650)
 \years{2011a}Milne, A. J.; \textbf{Xambó, A.}; Laney, R.; Sharp, D. B.; Prechtl, A. and Holland, S. (2011). “Hex Player — a virtual musical controller". In \emph{Proceedings of the International Conference on New Interfaces for Musical Expression (NIME '11)}. Oslo, Norway. pp. 244--247.\\
 \years{2010b}Laney, R., Dobbyn, C., \textbf{Xambó, A.}, Schirosa, M., Miell, D., Littleton, K. and Dalton, N. (2010). “Issues and techniques for collaborative music making on multi-touch surfaces". In \emph{7th Sound and Music Computing Conference (SMC 2010)}. Barcelona. pp. 146–153.\\
 \years{2010a}Haro, M.; \textbf{Xambó, A.}; Fuhrmann, F.; Bogdanov, D.; Gómez, E. and Herrera, P. (2010). “The Musical Avatar: a visualization of musical preferences by means of audio content description". In \emph{Proceedings of the 5th Audio Mostly Conference (AM '10)}. Piteå, Sweden.\\
-\years{2008}Roma, G. and \textbf{Xambó, A.} (2008). “A tabletop waveform editor for live performance". In \emph{Proceedings of the International Conference on New Interfaces for Musical Expression (NIME '08)}. Genoa, Italy.
+\years{2008}Roma, G. and \textbf{Xambó, A.} (2008). “A tabletop waveform editor for live performance". In \emph{Proceedings of the International Conference on New Interfaces for Musical Expression (NIME '08)}. Genoa, Italy.\\
+
+\subsection*{Peer-Reviewed Abstracts with Proceedings}
+\noindent
+\years{2016c}Tsuchiya, T., \textbf{Xambó, A.}, Freeman, J. (2016). “Adapting DAW-driven musical language to live coding: a case study in EarSketch". In \emph{Late-Breaking Demo of the Second International Conference on Live Coding (ICLC '16)}. Hamilton, Canada.\\ 
+\years{2016b}\textbf{Xambó, A.}, Lerch, A., Freeman, J. (2016). “Learning to code through MIR". In \emph{Extended abstracts for the Late-Breaking Demo Session of the 17th International Society for Music Information Retrieval Conference (ISMIR 2016)}. New York.\\
+\years{2016a}Roma, G., \textbf{Xambó, A.}, Freeman, J. (2016). “Do the Buzzer Shake". In \emph{International Conference of Live Interfaces (ICLI 2016)}. Brighton, UK.\\
+\years{2015}Freeman, J., Magerko, B., Edwards, D., Moore, R., McKlin, T., \textbf{Xambó, A.} (2015). “EarSketch: a STEAM approach to broadening participation in computer science principles". In \emph{Proceedings of the IEEE Research in Equity and Sustained Participation in Engineering, Computing, and Technology (RESPECT '15)}. Charlotte, NC. pp. 109--110.\\
+\years{2014}\textbf{Xambó, A.}, Jewitt, C., and Price, S. (2014). “Towards an integrated methodological framework for understanding embodiment in HCI". In \emph{Proceedings of the Extended Abstracts on Human Factors in Computing Systems (CHI '14)}. Toronto. pp. 1411--1416.
 
 \subsection*{Position \& Workshop Papers}
 \noindent
 
 \years{2012}\textbf{Xambó, A.}; Laney, R.; Dobbyn, C. and Jordà, S. (September 11, 2012). “Towards a taxonomy for video analysis on collaborative musical tabletops". In \emph{BCS HCI 2012 Workshop on video analysis techniques for HCI}. Birmingham, UK.\\
-\years{2011}\textbf{Xambó, A.}; Laney, R.; Dobbyn, C. and Jordà, S. (July 4, 2011). “Collaborative music interaction on tabletops: an HCI approach". In \emph{BCS HCI 2011 Workshop on When Words Fail: What can Music Interaction tell us about HCI?}. Newcastle Upon Tyne.
+\years{2011}\textbf{Xambó, A.}; Laney, R.; Dobbyn, C. and Jordà, S. (July 4, 2011). ``Collaborative music interaction on tabletops: an HCI approach'''. In \emph{BCS HCI 2011 Workshop on When Words Fail: What can Music Interaction tell us about HCI?}. Newcastle Upon Tyne.
 
 \subsection*{Reports \& Working Papers}
 \noindent
@@ -283,57 +288,65 @@ Candidate’s Share: 50\% (\$1,650)
 \years{2008}\textbf{Xambó, A.} (2008). Interfaces for Sketching Musical Compositions. Unpublished master's thesis. UPF.\\ 
 \years{2004}\textbf{Xambó, A.} and Martos, E. (2004). Crossmedia Infantil: Estudi sobre les noves tecnologies i la comunicació audiovisual a l'escola infantil i primària (Report of new technologies and audiovisual communication in the primary education). Unpublished report. Supported by Fundació Caixa de Sabadell. In collaboration with UB.
 
-
-%\section*{Talks, Presentations, Demos \& Workshops}
-
 \section*{Talks \& Oral Presentations}
 
 \subsection*{External}
-\years{2016e} \textsc{Oral Presenter}. Xambó, A. (July 2, 2016). Challenges and new directions for collaborative live coding in the classroom. \emph{ICLI 2016}. Brighton, UK.\\
-\years{2016c} \textsc{Keynote Speaker}. Dobson, L. and Xambó, A. (April 22, 2016). Anna Xambó and Liz Dobson in conversation. \emph{Women in Sound Women on Sound 2016: Educating girls in sound} at University of Lancaster. Lancaster, UK.\\
-\years{2015a} \textsc{Lightning Talk Speaker}. Xambó, A. (August 14, 2015). EarSketch: a STEAM approach to broadening participation in computer science principles. \emph{RESPECT 2015}. Charlotte, NC. USA.\\
-\years{2014c} \textsc{Oral Presenter}. Xambó, A. (July 1, 2014). SoundXY4: Supporting tabletop collaboration and awareness with ambisonics spatialisation. \emph{NIME '14}. London.\\
-\years{2014b} \textsc{Oral Presenter}. Xambó, A. (April 30, 2014). Let's jam the Reactable: Peer learning during musical improvisation with a tabletop tangible interface. \emph{CHI '14}. Toronto, ON.\\
-\years{2013b} \textsc{Oral Presenter}. Xambó, A. (November 11, 2013). Tabletop tangible interfaces for music performance and implications for tabletop research. \emph{School of Computing}, University of Kent. Kent, UK.\\
-\years{2011d} \textsc{Oral Presenter}. Xambó, A. (August 2, 2011). Multi-touch interaction principles for collaborative real-time music activities: towards a pattern language. \emph{ICMC '11}. Huddersfield, UK.\\
-\years{2011c} \textsc{Oral Presenter}. Xambó, A. (July 4, 2011). Collaborative music interaction on tabletops: An HCI approach?. \emph{BCS HCI 2011 Workshop on When Words Fail: What can Music Interaction tell us about HCI?}. Newcastle Upon Tyne, UK.\\
-\years{2010c} \textsc{Oral Presenter}. Xambó, A. (July 23, 2010). Issues and techniques for collaborative music making on multi-touch surfaces. \emph{SMC '10}. Barcelona.\\
-\years{2008c} \textsc{Panel Member}. Alsina, A., Ferrete, J., Roma, G. and Xambó, A. (October 31, 2008). Freesound, Sons de Barcelona y Freesound Radio: Proyectos colaborativos alrededor del sonido. \emph{IV Cicle de Converses d'Antropologia Sonora}, Institució Milá i Fontanals (CSIC). Barcelona.\\
-\years{2008b} \textsc{Panel Member}. Alsina, A., Ferrete, J., Roma, G. and Xambó, A. (2008). Freesound.org, Freesound Radio i Sons de Barcelona. \emph{Facultat de Belles Arts (Faculty of Fine Arts)}, Universitat de Barcelona. Barcelona.\\
-\years{2008a} \textsc{Panel Member}. Alsina, A., de Jong, B., Loscos, A., Roma, G. and Xambó, A. (September 27, 2008). Influencia de la tecnología en la evolución de la música y la industria. \emph{NetAudio}, CCCB. Barcelona. \href{https://www.youtube.com/watch?v=6JlCCvYXrHY}{[video]}\\
-\years{2007}\textsc{Oral Presenter}. Roma, G. and Xambó, A. (September 20, 2007). A sound editor with a tangible interface. \emph{SCSymposium(2007)}, DCM. The Hague, The Netherlands.
+\years{2016b} \textsc{Oral Presenter}. (July 2, 2016). Challenges and new directions for collaborative live coding in the classroom. \emph{ICLI 2016}. Brighton, UK.\\
+\years{2016a} \textsc{Keynote Speaker}. (April 22, 2016). Anna Xambó and Liz Dobson in conversation. \emph{Women in Sound Women on Sound 2016: Educating girls in sound} at University of Lancaster. Lancaster, UK.\\
+\years{2015} \textsc{Lightning Talk Speaker}.(August 14, 2015). EarSketch: a STEAM approach to broadening participation in computer science principles. \emph{RESPECT 2015}. Charlotte, NC. USA.\\
+\years{2014b} \textsc{Oral Presenter}. (July 1, 2014). SoundXY4: Supporting tabletop collaboration and awareness with ambisonics spatialisation. \emph{NIME '14}. London.\\
+\years{2014a} \textsc{Oral Presenter}. (April 30, 2014). Let's jam the Reactable: Peer learning during musical improvisation with a tabletop tangible interface. \emph{CHI '14}. Toronto, ON, Canada.\\
+\years{2013} \textsc{Oral Presenter}. (November 11, 2013). Tabletop tangible interfaces for music performance and implications for tabletop research. \emph{School of Computing}, University of Kent. Kent, UK.\\
+\years{2011b} \textsc{Oral Presenter}. (August 2, 2011). Multi-touch interaction principles for collaborative real-time music activities: towards a pattern language. \emph{ICMC '11}. Huddersfield, UK.\\
+\years{2011a} \textsc{Oral Presenter}. (July 4, 2011). Collaborative music interaction on tabletops: An HCI approach. \emph{BCS HCI 2011 Workshop on When Words Fail: What can Music Interaction tell us about HCI?}. Newcastle Upon Tyne, UK.\\
+\years{2010} \textsc{Oral Presenter}. (July 23, 2010). Issues and techniques for collaborative music making on multi-touch surfaces. \emph{SMC '10}. Barcelona.\\
+\years{2008c} \textsc{Panel Member} together with Alsina, A., Ferrete, J. and Roma, G. (October 31, 2008). Freesound, Sons de Barcelona y Freesound Radio: Proyectos colaborativos alrededor del sonido. \emph{IV Cicle de Converses d'Antropologia Sonora}, Institució Milá i Fontanals (CSIC). Barcelona.\\
+\years{2008b} \textsc{Panel Member} together with Alsina, A., Ferrete, J. and Roma, G. (2008). Freesound.org, Freesound Radio i Sons de Barcelona. \emph{Facultat de Belles Arts (Faculty of Fine Arts)}, Universitat de Barcelona. Barcelona.\\
+\years{2008a} \textsc{Panel Member} together with Alsina, A., de Jong, B., Loscos, A. and Roma, G. (September 27, 2008). Influencia de la tecnología en la evolución de la música y la industria. \emph{NetAudio}, CCCB. Barcelona. \href{https://www.youtube.com/watch?v=6JlCCvYXrHY}{[video]}\\
+\years{2007}\textsc{Oral Presenter} together with Roma, G. (September 20, 2007). A sound editor with a tangible interface. \emph{SCSymposium(2007)}, DCM. The Hague, The Netherlands.
 
 \subsection*{Own Institution}
-\years{2016d} \textsc{Lightning Talk Speaker}. Xambó, A. (November 2, 2016). Tangible user interfaces and tabletops. \emph{First Annual Women and Music Tech Concert and Reception}, The Garage. Atlanta, GA. USA.\\
-\years{2016c} \textsc{Panel Member}. Xambó, A.; Ikkache, L. and Jackson, D. (May 5, 2016). Women in Sound. Oral presentation and discussion. \emph{Georgia Tech Center for Music Technology (GTCMT)}, Geogia Tech. Atlanta, GA, USA.\\
-\years{2016b} \textsc{Oral Presenter}. Xambó, A. (February 25, 2016). Algorithmic composition: my personal journey. Oral presentation as a guest speaker in Jason Freeman's \emph{Computer Music Composition} class. GTCMT. Atlanta, GA, USA.\\
-\years{2016a} \textsc{Oral Presenter}. Xambó, A. (January 26, 2016). EarSketch: computational music remixing for all. Oral presentation as a guest speaker in Barbara Ericson's \emph{Educational Technology} class. College of Computing, Georgia Tech. Atlanta, GA, USA.\\
-\years{2015c} \textsc{Oral Presenter}. Xambó, A. (September 3, 2015). Musical tabletops: challenges and opportunities for computer-supported collaborative music and HCI. \emph{College of Architecture Research Forum}, Georgia Tech. Atlanta, GA, USA.\\ 
-\years{2015b} \textsc{Oral Presenter}. Xambó, A. (August 27, 2015). Musical tabletops: challenges and opportunities for computer-supported collaborative music and HCI. \emph{GVU Center Brown Bag Seminar Series}, Georgia Tech. Atlanta, GA, USA. \href{https://www.youtube.com/watch?v=VzOdtsq8YyE}{[video]}\\
-\years{2015a} \textsc{Oral Presenter}. Xambó, A. (August 24, 2015). Musical tabletops: challenges and opportunities for computer-supported collaborative music and HCI. \emph{GTCMT Seminar Series}, Georgia Tech. Atlanta, GA, USA.\\ 
-\years{2014} \textsc{Oral Presenter}. Xambó, A. (April 9, 2014). Let's jam the Reactable: Peer learning during musical improvisation with a tabletop tangible interface. \emph{London Knowledge Lab}. London.\\
-\years{2013} \textsc{Oral Presenter}. Xambó, A. (June 2, 2013). Tabletop groupware for music performance: Design and evaluation. \emph{CRC PhD Student Conference 2013}, OU. Milton Keynes, UK.\\
-\years{2012} \textsc{Oral Presenter}. Xambó, A. (June 12, 2012). Collaboration on interactive tabletops for music performance: An exploratory study. \emph{CRC PhD Student Conference 2012}, OU. Milton Keynes, UK.\\
-\years{2011b} \textsc{Oral Presenter}. Xambó, A. (June 16, 2011). Tabletop groupware for music performance: Design and evaluation. \emph{CRC PhD Student Conference 2011}, OU. Milton Keynes, UK.\\
-\years{2011a} \textsc{Oral Presenter}. Xambó, A. (May 17, 2011). Tabletop groupware for music performance: Design and evaluation. \emph{2011 Doctoral Workshops Conference}, OU. Milton Keynes, UK.\\
-\years{2010b} \textsc{Oral Presenter}. Xambó, A. (June 8, 2010). Issues and techniques for collaborative music making on multi-touch surfaces. \emph{CRC PhD Student Conference 2010}, OU. Milton Keynes, UK.\\
-\years{2010a} \textsc{Oral Presenter}. Xambó, A. (May, 2010). Issues and techniques for collaborative music making on multi-touch surfaces. \emph{Music Research Day}, Music Research Studio, OU. Milton Keynes, UK.\\
+\years{2016d} \textsc{Lightning Talk Speaker}. (November 2, 2016). Tangible user interfaces and tabletops. \emph{First Annual Women and Music Tech Concert and Reception}, The Garage. Atlanta, GA. USA.\\
+\years{2016c} \textsc{Panel Member} together with Ikkache, L. and Jackson, D. (May 5, 2016). Women in Sound. Oral presentation and discussion. \emph{Georgia Tech Center for Music Technology (GTCMT)}, Geogia Tech. Atlanta, GA, USA.\\
+\years{2016b} \textsc{Oral Presenter}. (February 25, 2016). Algorithmic composition: my personal journey. Oral presentation as a guest speaker in Jason Freeman's \emph{Computer Music Composition} class. GTCMT. Atlanta, GA, USA.\\
+\years{2016a} \textsc{Oral Presenter}. (January 26, 2016). EarSketch: computational music remixing for all. Oral presentation as a guest speaker in Barbara Ericson's \emph{Educational Technology} class. College of Computing, Georgia Tech. Atlanta, GA, USA.\\
+\years{2015c} \textsc{Oral Presenter}. (September 3, 2015). Musical tabletops: challenges and opportunities for computer-supported collaborative music and HCI. \emph{College of Architecture Research Forum}, Georgia Tech. Atlanta, GA, USA.\\ 
+\years{2015b} \textsc{Oral Presenter}. (August 27, 2015). Musical tabletops: challenges and opportunities for computer-supported collaborative music and HCI. \emph{GVU Center Brown Bag Seminar Series}, Georgia Tech. Atlanta, GA, USA. \href{https://www.youtube.com/watch?v=VzOdtsq8YyE}{[video]}\\
+\years{2015a} \textsc{Oral Presenter}. (August 24, 2015). Musical tabletops: challenges and opportunities for computer-supported collaborative music and HCI. \emph{GTCMT Seminar Series}, Georgia Tech. Atlanta, GA, USA.\\ 
+\years{2014} \textsc{Oral Presenter}. (April 9, 2014). Let's jam the Reactable: Peer learning during musical improvisation with a tabletop tangible interface. \emph{London Knowledge Lab}. London.\\
+\years{2013} \textsc{Oral Presenter}. (June 2, 2013). Tabletop groupware for music performance: Design and evaluation. \emph{CRC PhD Student Conference 2013}, OU. Milton Keynes, UK.\\
+\years{2012} \textsc{Oral Presenter}. (June 12, 2012). Collaboration on interactive tabletops for music performance: An exploratory study. \emph{CRC PhD Student Conference 2012}, OU. Milton Keynes, UK.\\
+\years{2011b} \textsc{Oral Presenter}. (June 16, 2011). Tabletop groupware for music performance: Design and evaluation. \emph{CRC PhD Student Conference 2011}, OU. Milton Keynes, UK.\\
+\years{2011a} \textsc{Oral Presenter}. (May 17, 2011). Tabletop groupware for music performance: Design and evaluation. \emph{2011 Doctoral Workshops Conference}, OU. Milton Keynes, UK.\\
+\years{2010b} \textsc{Oral Presenter}. (June 8, 2010). Issues and techniques for collaborative music making on multi-touch surfaces. \emph{CRC PhD Student Conference 2010}, OU. Milton Keynes, UK.\\
+\years{2010a} \textsc{Oral Presenter}. (May, 2010). Issues and techniques for collaborative music making on multi-touch surfaces. \emph{Music Research Day}, Music Research Studio, OU. Milton Keynes, UK.\\
 
 \section*{Poster Presentations, Demos \& Workshops}
 
 \subsection*{Poster Presentations \& Demos}
 
-\years{2016c} \textsc{Poster \& Demo Presenter}. Xambó, A. (August 11, 2016). Learning to code through MIR. \emph{Late-Breaking Demo Session of ISMIR 2016}. New York.\\
-\years{2016b} \textsc{Poster \& Demo Presenter}. Roma, G.; Xambó, A. and Freeman, J. (July 2, 2016). Do the Buzzer Shake. \emph{ICLI 2016 Conference}. Brighton, UK.\\
-\years{2016a} \textsc{Poster Presenter}. Xambó, A. (April 29, 2014). Towards an integrated methodological framework for understanding embodiment in HCI. \emph{CHI 2014 Conference}. Toronto, ON. \href{https://www.youtube.com/watch?v=pRDHuCUltwo}{[video]}\\
-\years{2012b} \textsc{Demo Presenter}. Xambó, A. (January 10, 2012). Tangible Additive Sound Synthesis (TASS). \emph{Welcome to the French Embassy}, OU. Milton Keynes, UK.\\
-\years{2012a} \textsc{Poster Presenter}. Xambó, A. (June 17, 2011). Designing and evaluating interactive systems: Musical tabletops for collective music performance. \emph{CRC PhD Student Conference 2011}, OU. Milton Keynes, UK.\\
-\years{2011} \textsc{Poster Presenter}. Xambó, A. (March 8, 2011). Designing and evaluating interactive systems: Musical tabletops for collective music performance. \emph{The Open University Poster Competition 2011}. Milton Keynes, UK.
+\years{2016b} \textsc{Poster \& Demo Presenter}. (August 11, 2016). Learning to code through MIR. \emph{Late-Breaking Demo Session of ISMIR 2016}. New York.\\
+\years{2016a} \textsc{Poster \& Demo Presenter} together with Roma, G. (July 2, 2016). Do the Buzzer Shake. \emph{ICLI 2016}. Brighton, UK.\\
+\years{2015} \textsc{Poster \& Demo Presenter} together with McKlin, T. (August 14, 2015). EarSketch: a STEAM approach to broadening participation in computer science principles. \emph{RESPECT 2015}. Charlotte, NC. USA.\\
+\years{2014} \textsc{Poster Presenter} together with Price, S. (April 29, 2014). Towards an integrated methodological framework for understanding embodiment in HCI. \emph{CHI '14}. Toronto, ON. \href{https://www.youtube.com/watch?v=pRDHuCUltwo}{[video]}\\
+\years{2012} \textsc{Demo Presenter}. (January 10, 2012). Tangible Additive Sound Synthesis (TASS). \emph{Welcome to the French Embassy}, OU. Milton Keynes, UK.\\
+\years{2011d} \textsc{Poster Presenter}. (June 17, 2011). Designing and evaluating interactive systems: Musical tabletops for collective music performance. \emph{CRC PhD Student Conference 2011}, OU. Milton Keynes, UK.\\
+\years{2011c} \textsc{Poster \& Demo Presenter} together with Milne, A. J. (May 30, 2011). Hex Player — a virtual musical controller. \emph{NIME '11}. Oslo, Norway.\\
+\years{2011b} \textsc{Poster Presenter}. (March 8, 2011). Designing and evaluating interactive systems: Musical tabletops for collective music performance. \emph{The Open University Poster Competition 2011}. Milton Keynes, UK.
+\years{2011a} \textsc{Poster Presenter}. (January 25, 2011) TOUCHtr4ck: democratic collaborative music. \emph{TEI '11}. Funchal, Madeira.\\
+\years{2010} \textsc{Poster Presenter}. (June 8, 2010). Issues and techniques for collaborative music making on multi-touch surfaces. \emph{CRC PhD Student Conference 2010}, OU. Milton Keynes, UK.\\
+\years{2008b} \textsc{Poster Presenter}. (June 9--11, 2010). Interfaces for Sketching Musical Compositions. \emph{SMC Summer School 2008}. Genoa, Italy.\\
+\years{2008a} \textsc{Poster Presenter} together with Roma, G. (June 6, 2008) A tabletop waveform editor for live performance. \emph{NIME '08}. Genoa, Italy.
+
 
 \subsection*{Workshops}
 
-\years{2013} Xambó, A. (May 2	, 2013). Introduction to SuperCollider. \emph{Music Computing Meeting}, OU. Milton Keynes, UK.\\
-\years{2012} Xambó, A.; Roma, G. and Bovermann, T. (April 15, 2012). Tangible musical interfaces with SuperCollider. \emph{SuperCollider Symposium 2012}, Goldsmiths, University of London. London.
+\years{2013} \textbf{Xambó, A.} (May 2, 2013). Introduction to SuperCollider. \emph{Music Computing Meeting}, OU. Milton Keynes, UK.\\
+\years{2012} \textbf{Xambó, A.}; Roma, G. and Bovermann, T. (April 15, 2012). Tangible musical interfaces with SuperCollider. \emph{SuperCollider Symposium 2012}, Goldsmiths, University of London. London.
+
+\subsection*{Webinars}
+
+\years{2016} \textbf{Xambó, A.} (October 28, 2016). Debugging with EarSketch. GTCMT, Georgia Tech, Atlanta, GA, USA.
 
 \section*{Discography}
 
@@ -483,9 +496,9 @@ Course: \emph{Crossmedia infantil} (12 h). \# Students (3--4 years old): $\sim$8
 \years{2012}Live Coding Sessions. (March 15, 2012). Niu. Barcelona.
 
 \subsection*{Blogging}
-\years{2016--}\href{htp://womeninmusictech.gatech.edu}{Women in Music Tech}, the newsletter of the Women in Music Tech organization. Co-Creator and Co-Author.\\ 
+\years{2016--present}\href{htp://womeninmusictech.gatech.edu}{Women in Music Tech}, the newsletter of the Women in Music Tech organization. Co-Creator and Co-Author.\\ 
 \years{09/2013--08/2014}\href{http://midassblog.wordpress.com}{MIDAS's Blog}, the research blog of the MIDAS project. Co-Creator and Co-Author. \\ 
-\years{01/2010--12/2011} \href{http://postwimp.com}{postWIMP}, a blog on HCI and interaction design. Co-Creator and Author.\\
+\years{01/2010--12/2011} \href{http://postwimp.com}{postWIMP}, a blog on HCI and interaction design. Co-Creator and Co-Author.\\
 \years{03/2006--03/2009}\href{http://streetypes.blogspot.com}{streeTypes}, a blog on typography in public spaces. Creator and Author.  
 
 \subsection*{Artistic Collective Projects}
