minor changes, text improvements in statements and footer with date in statements

--- a/Xambo.CV.tex
+++ b/Xambo.CV.tex
@@ -100,7 +100,7 @@ email: \href{mailto:anna.xambo@gatech.edu}{anna.xambo@gatech.edu}\\
 
 %%\hrule
 \section*{Areas of Interest}
-Design of digital musical instruments (DMIs) • Real-time interactive systems for music performance • Human-computer interaction • Tangible, physical \& social computing • Computer-supported collaborative, participatory \& improvisation music • Live coding • Real-time music information retrieval • Algorithmic composition \& randomized algorithms • Immersive sound experiences • Women in music tech • Arts \& social sciences research methods • STEAM education • Data visualization • Creative programming 
+Design of digital musical instruments (DMIs) • Real-time interactive systems for music performance • Human-computer interaction • Interaction Design • Tangible, physical \& social computing • Computer-supported collaborative, participatory \& improvisation music • Live coding • Real-time music information retrieval • Algorithmic composition \& randomized algorithms • Immersive sound experiences • Women in music tech • Arts \& social sciences research methods • STEAM education • Data visualization • Creative programming 
 
 %\hrule
 \section*{Education}
