updates early December 2016

--- a/Xambo.CV.tex
+++ b/Xambo.CV.tex
@@ -100,7 +100,7 @@ email: \href{mailto:anna.xambo@gatech.edu}{anna.xambo@gatech.edu}\\
 
 %%\hrule
 \section*{Areas of Interest}
-Design of digital musical instruments (DMIs) • Real-time interactive systems for music performance • Human-computer interaction • Interaction Design • Tangible, physical \& social computing • Computer-supported collaborative, participatory \& improvisation music • Live coding • Real-time music information retrieval • Algorithmic composition \& randomized algorithms • Immersive sound experiences • Women in music tech • Arts \& social sciences research methods • STEAM education • Data visualization • Creative programming 
+Design of digital musical instruments (DMIs) • Real-time interactive systems for music performance • Human-computer interaction • Interaction design • Tangible, physical \& social computing • Computer-supported collaborative, participatory \& improvisation music • Live coding • Real-time music information retrieval • Algorithmic composition \& randomized algorithms • Immersive sound experiences • Women in music tech • Arts \& social sciences research methods • STEAM education • Data visualization • Creative programming 
 
 %\hrule
 \section*{Education}
@@ -192,7 +192,7 @@ Role: Postdoctoral Fellow and Co-Writer of the grant proposal. \\
 Collaborators: Brian Magerko (PI), Jason Freeman (Co-PI), Mike Horn (Co-PI).\\
 Total Dollar Amount: \$2,517,690.00
 
-\subsection*{Organization Member}
+\subsection*{Organization Co-Founder}
 
 \years{10/2016}\textsc{Women in Music Tech Fall Event} \\
 Role: Co-Founder \& Co-Chair of the organization, Co-Organizer of the event. \\[.1cm]
@@ -255,7 +255,7 @@ Candidate’s Share: 50\% (\$1,650)
 
 \subsection*{Peer-Reviewed Conference Papers}
 \noindent
-\years{2016c}\textbf{Xambó, A.}, Drozda, B., Weisling, A., Magerko, B., Huet, M., Gasque, T., Freeman, J. (accepted) Experience and ownership with a tangible computational music installation for informal learning. In \emph{Proceedings of the Tangible, Embedded, and Embodied Interaction Conference (TEI '17)}. \\ 
+\years{2017}\textbf{Xambó, A.}, Drozda, B., Weisling, A., Magerko, B., Huet, M., Gasque, T., Freeman, J. (accepted) Experience and ownership with a tangible computational music installation for informal learning. In \emph{Proceedings of the Tangible, Embedded, and Embodied Interaction Conference (TEI '17)}. \\ 
 \years{2016b}Freeman, J., Magerko, B., Edwards, D., Miller, M., Moore, R., \textbf{Xambó, A.} (2016). “Using EarSketch to broaden participation in computing and music". In \emph{Proceedings of the 13th Sound and Music Computing Conference (SMC 2016)}. Hamburg, Germany. pp. 156--163.\\
 \years{2016a}\textbf{Xambó, A.}, Freeman, J., Magerko, B., Shah, P. (2016). “Challenges and new directions for collaborative live coding in the classroom". In \emph{International Conference of Live Interfaces (ICLI 2016)}. Brighton, UK.\\
 \years{2014}\textbf{Xambó, A.}, Roma, G., Laney, R., Dobbyn, C. and Jordà, S. (2014). “SoundXY4: supporting tabletop collaboration and awareness with ambisonics spatialisation". In \emph{Proceedings of the International Conference on New Interfaces for Musical Expression 2014 (NIME '14)}. London. pp. 249--252.\\
@@ -362,7 +362,7 @@ Candidate’s Share: 50\% (\$1,650)
 \subsection*{Participation in Compilations}
 \years{2016}peterMann. (2016). Go wild y'all (1 min). in \emph{Microtopies 2016} [MP3 files]. Barcelona: Gracia Territori Sonor.\\
 \years{2015}peterMann. (2015). ldnsktch01(1 min). In \emph{Microtopies 2015} [MP3 files]. Barcelona: Gracia Territori Sonor.\\
-\years{2010}peterMann. (2010). init11 (3 min 29 sec). In \emph{Electronic music from Catalonia 2010} [CD]. Barcelona: Catalan! Arts / Sonar, Barcelona.\\
+\years{2010}peterMann. (2010). init11 (3 min 29 sec). In \emph{Electronic music from Catalonia 2010} [CD]. Barcelona: Catalan! Arts / Sonar, Barcelona.
 
 \subsection*{Broadcasting}
 
@@ -389,7 +389,7 @@ Candidate’s Share: 50\% (\$1,650)
 \subsection*{Selected Group Performances}
 \years{2012}pulso. (March 15, 2012). Live. \emph{Live Coding Sessions}. Niu. Barcelona.\\
 \years{2004}pulso. (May 29, 2004). Live. \emph{Minima Festival}. Gandía, Spain.\\
-\years{2002}b4ng. (June 13, 2002). Live. \emph{Sonar Festival}. Barcelona.\\
+\years{2002}b4ng. (June 13, 2002). Live. \emph{Sonar Festival}. Barcelona.
 
 \section*{Other Creative Products}
 
@@ -507,7 +507,6 @@ Course: \emph{Crossmedia infantil} (12 h). \# Students (3--4 years old): $\sim$8
 \years{2002}Co-Founder and Member of b4ng, a multidisciplinary collective in search of new forms of audiovisual communication. Barcelona.\\
 \years{1998--2000}Co-Founder and Member of the experimental video collective jesus13. Barcelona.\\[.2cm] 
 
-
 %\hrule
 \section*{Professional Activities}
 \noindent
@@ -544,6 +543,12 @@ Course: \emph{Crossmedia infantil} (12 h). \# Students (3--4 years old): $\sim$8
 \noindent
 
 \years{2016}\emph{MOOG Hackathon 2016}, GTCMT, Georgia Tech. Atlanta, GA, USA.
+
+\subsection*{Music Judge}
+\noindent
+
+\years{2017}\emph{National Student Electronic Music Event 2017}, Louisiana State University. Baton Rouge, LA, USA.
+\years{2017}\emph{EarSketch National Competition 2017}, GTCMT, Georgia Tech. Atlanta, GA, USA.
 
 %\hrule
 \subsection*{Consultancies}
