--- a/Xambo.CV.tex
+++ b/Xambo.CV.tex
@@ -376,18 +376,19 @@ Candidate’s Share: 50\% (\$1,650)
 \years{2010a}peterMann's init 2. (April 12, 2010). Sismógrafo.
 
 
-\section*{Performances}
+\section*{Selected Performances}
 
 \subsection*{Solo Performances}
 
+\years{2017}peterMann. (January 8, 2017). Live coding session. \emph{Noiselets}. Freedonia, Barcelona.\\
 \years{2016b}Xambó, A. (April 22, 2016). Live coding with EarSketch. \emph{Women in Sound Women on Sound 2016: Educating girls in sound}. Jack Hylton Music Room, University of Lancaster. Lancaster, UK.\\
 \years{2016a}peterMann. (April 22, 2016). Live. \emph{Women in Sound Women on Sound 2016: Educating girls in sound}. Jack Hylton Music Room, University of Lancaster. Lancaster, UK.\\
-\years{2013}Xambó, A. (October 4, 2013). Live. \emph{Perspectives on Multichannel Live Coding}. PHONOS. Sala Polivalent, UPF. Barcelona.\\
+\years{2013}Xambó, A. (October 4, 2013). Live coding session. \emph{Perspectives on Multichannel Live Coding}. PHONOS. Sala Polivalent, UPF. Barcelona.\\
 \years{2012}peterMann. (September 20, 2012). Live. \emph{Crispy Crunchy Creaky}. Niu. Barcelona.\\
 \years{2006}peterMann. (June 10, 2006). Live. \emph{5a Mostra Sonora i Visual | Convent Sant Agustí}. Barcelona.
 
-\subsection*{Selected Group Performances}
-\years{2012}pulso. (March 15, 2012). Live. \emph{Live Coding Sessions}. Niu. Barcelona.\\
+\subsection*{Group Performances}
+\years{2012}pulso. (March 15, 2012). Live coding session. \emph{Live Coding Sessions}. Niu. Barcelona.\\
 \years{2004}pulso. (May 29, 2004). Live. \emph{Minima Festival}. Gandía, Spain.\\
 \years{2002}b4ng. (June 13, 2002). Live. \emph{Sonar Festival}. Barcelona.
 
@@ -398,7 +399,7 @@ Candidate’s Share: 50\% (\$1,650)
 \years{2014}crowdj. \emph{Music Hack Day}. Barcelona.\\ 
 Prize: Rdio prize.\\
 Role: Concept, part of the implementation and user interface design.\\
-Collaborator: Gerard Roma.\\
+Collaborator: Gerard Roma.\\[1.5cm] %WORKAROUND WITH CURRENT CONTENT. DELETE WITH ADDITION OF NEW CONTENT.
 \years{2012b}Soundscape Turntablism. \emph{Music Hack Day}. Barcelona.\\ 
 Prize: Reactable prize, Zvooq prize.\\  
 Role: Concept, part of the implementation and tangible user interface design.\\
@@ -488,11 +489,12 @@ Course: \emph{Crossmedia infantil} (12 h). \# Students (3--4 years old): $\sim$8
 
 \subsection*{Concerts Co-Organization}
 
-\years{2016}Women in Music Tech. (November 2, 2016). The Garage. Atlanta, GA, USA.\\
-\years{2016}Audience device participation. (April 5, 2016). \emph{Web Audio Conference 2016}, Georgia Tech. Atlanta, GA, USA.\\
-\years{2016}Live coding and the audiovisual web. (April 4, 2016). \emph{Web Audio Conference 2016}, Georgia Tech. Atlanta, GA, USA.\\
-\years{2013}Perspectives on multichannel live coding. (October 4, 2013). PHONOS. Sala Polivalent, UPF. Barcelona.\\
-\years{2013}Live Coding Sessions II. (March 22, 2013). Niu. Barcelona.\\
+\years{2017}Noiselets. (January 8, 2017). Freedonia, Barcelona.\\
+\years{2016c}Women in Music Tech. (November 2, 2016). The Garage. Atlanta, GA, USA.\\
+\years{2016b}Audience device participation. (April 5, 2016). \emph{Web Audio Conference 2016}, Georgia Tech. Atlanta, GA, USA.\\
+\years{2016a}Live coding and the audiovisual web. (April 4, 2016). \emph{Web Audio Conference 2016}, Georgia Tech. Atlanta, GA, USA.\\
+\years{2013b}Perspectives on multichannel live coding. (October 4, 2013). PHONOS. Sala Polivalent, UPF. Barcelona.\\
+\years{2013a}Live Coding Sessions II. (March 22, 2013). Niu. Barcelona.\\
 \years{2012}Live Coding Sessions. (March 15, 2012). Niu. Barcelona.
 
 \subsection*{Blogging}
@@ -505,7 +507,7 @@ Course: \emph{Crossmedia infantil} (12 h). \# Students (3--4 years old): $\sim$8
 
 \years{2008--present}Co-Founder of the experimental electronic music label Carpal Tunnel. Barcelona.\\
 \years{2002}Co-Founder and Member of b4ng, a multidisciplinary collective in search of new forms of audiovisual communication. Barcelona.\\
-\years{1998--2000}Co-Founder and Member of the experimental video collective jesus13. Barcelona.\\[.2cm] 
+\years{1998--2000}Co-Founder and Member of the experimental video collective jesus13. Barcelona.\\[.0cm] 
 
 %\hrule
 \section*{Professional Activities}
@@ -515,7 +517,7 @@ Course: \emph{Crossmedia infantil} (12 h). \# Students (3--4 years old): $\sim$8
 \noindent
 
 \years{2016}\textsc{Co-Founder \& Co-Chair}. \emph{Women in Music Tech}, GTCMT, Georgia Tech. Atlanta, GA, USA.\\
-\years{2016}\textsc{Music/Artworks Chair}. \emph{Web Audio Conference 2016}, Georgia Tech. Atlanta, GA, USA.\\
+\years{2016}\textsc{Music/Artworks Co-Chair}. \emph{Web Audio Conference 2016}, Georgia Tech. Atlanta, GA, USA.\\
 \years{2011}\textsc{Session Chair} (``Laptop/Coding/NI''). \emph{ICMC '11}. Huddersfield, UK.\\
 \years{2011}\textsc{Committee Member}. \emph{CRC PhD Student Conference 2011}, OU. Milton Keynes, UK.
 
@@ -537,6 +539,11 @@ Course: \emph{Crossmedia infantil} (12 h). \# Students (3--4 years old): $\sim$8
 \years{2015}\emph{International Journal of Human-Computer Studies}. Elsevier.\\
 \years{2016b}\emph{Interacting with Computers}. Oxford Journals.\\
 \years{2016a}\emph{Qualitative Research}. Sage Publications.
+
+\subsection*{Organization Member}
+\noindent
+\emph{Association for Computing Machinery}.
+
 
 \subsection*{Jury Member}
 \noindent
@@ -568,7 +575,7 @@ Co-Founder of a freelance studio focused on user-centric software and AV communi
 
 \years{05/2012}University of Strathclyde, Glasgow, Scotland, UK.\\
 \years{06/2011}University of Strathclyde, Glasgow, Scotland, UK.\\
-\years{04/2011--05/2011}Universitat Pompeu Fabra, Barcelona.
+\years{04/2011--05/2011} UPF, Barcelona, Spain.
 
 %\hrule
 \section*{Skills}
