--- a/Xambo.CV.tex
+++ b/Xambo.CV.tex
@@ -513,9 +513,14 @@ Course: \emph{Crossmedia infantil} (12 h). \# Students (3--4 years old): $\sim$8
 \section*{Professional Activities}
 \noindent
 
+\subsection*{Organization Member}
+\noindent
+\emph{Association for Computing Machinery}.
+
 \subsection*{Committee Member / Conference Chair}
 \noindent
 
+\years{2017}\textsc{Local Committee Member}. \emph{International Conference on Computational Creativity 2017}, Georgia Tech. Atlanta, GA, USA.\\
 \years{2016}\textsc{Co-Founder \& Co-Chair}. \emph{Women in Music Tech}, GTCMT, Georgia Tech. Atlanta, GA, USA.\\
 \years{2016}\textsc{Music/Artworks Co-Chair}. \emph{Web Audio Conference 2016}, Georgia Tech. Atlanta, GA, USA.\\
 \years{2011}\textsc{Session Chair} (``Laptop/Coding/NI''). \emph{ICMC '11}. Huddersfield, UK.\\
@@ -530,6 +535,7 @@ Course: \emph{Crossmedia infantil} (12 h). \# Students (3--4 years old): $\sim$8
 \years{2012--2017}\emph{ACM Tangible, Embedded and Embodied Interaction} (2012--2017).\\
 \years{2013}\emph{IEEE Interactive Tabletops and Surfaces} (2013).\\
 \years{2016}\emph{International Conference on Live Interfaces} (2016).\\
+\years{2017}\emph{ACM Innovation and Technology in Computer Science Education} (2017).\\
 \years{2016}\emph{ISSTA International Festival and Conference on Sound in the Arts, Science and Technology} (2016).\\
 \years{2016}\emph{Web Audio Conference} (2016).
 
@@ -539,11 +545,6 @@ Course: \emph{Crossmedia infantil} (12 h). \# Students (3--4 years old): $\sim$8
 \years{2015}\emph{International Journal of Human-Computer Studies}. Elsevier.\\
 \years{2016b}\emph{Interacting with Computers}. Oxford Journals.\\
 \years{2016a}\emph{Qualitative Research}. Sage Publications.
-
-\subsection*{Organization Member}
-\noindent
-\emph{Association for Computing Machinery}.
-
 
 \subsection*{Jury Member}
 \noindent
