--- a/Xambo.CV.tex
+++ b/Xambo.CV.tex
@@ -540,7 +540,7 @@ Course: \emph{Crossmedia infantil} (12 h). \# Students (3--4 years old): $\sim$8
 \years{2013}\emph{IEEE Interactive Tabletops and Surfaces} (2013).\\
 \years{2016}\emph{International Conference on Live Interfaces} (2016).\\
 \years{2016}\emph{ISSTA International Festival and Conference on Sound in the Arts, Science and Technology} (2016).\\
-\years{2016}\emph{Web Audio Conference} (2016).
+\years{2016}\emph{Web Audio Conference} (2016--2017).
 
 \subsection*{Journal Reviewer}
 \noindent
